--- a/views/home.html
+++ b/views/home.html
@@ -98,18 +98,15 @@
     <footer>
         <article>
             <h5>Pagá con tarjeta o en efectivo </h5>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
-                seguro! </p>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro! </p>
         </article>
         <article>
             <h5> Envío gratis desde $ 2.500 </h5>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
-                Mercado Puntos. </p>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos. </p>
         </article>
         <article>
             <h5> Seguridad, de principio a fin </h5>
-            <p> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
-                protegid@.</p>
+            <p> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
         </article>
         <p> Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
     </footer>
