agrego comentarios para facil comprensión

--- a/views/home.html
+++ b/views/home.html
@@ -6,16 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <header>
+        <!-- div: etique de bloque, permite generar divisiones en nuesto sitio -->
+        <!-- img: etiqueta de imagen -->
         <img src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="100%">
-
+        <!-- span: son de linea y se suelen usar para contener porciones de tecto y 
+            asi poder deteminarle un estilo independientemente al bloque de codigo al que pertenece -->
         <span>Lugar para poner la barra de busqueda</span>
 
         <h4> Comprá en cuotas y sin tarjeta de crédito </h4>
-
+        <!-- nav: sirve para generar una barra de navegacion-->
         <nav>
             <ul>
                 <li> <a href=""> Ofertas </a> </li>
@@ -34,29 +38,31 @@
         <img src="/images/img-home-banner.jpg" alt="img-home-banner" width="100%">
         <section>
             <h4> Basado en tu última visita </h4>
+            <!-- article: nos permite definir una pieza de contenido como productos, servicios, noticias, 
+                generalmente se encuentran dentro de secciones -->
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex" width="100$">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex" width="100%">
                 <p>$6.770</p>
                 <p>40% OFF</p>
                 <h5>Cafetera Moulinex</h5>
             </article>
 
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019" width="100$">
+                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019" width="100%">
                 <p>$230.00</p>
                 <p>20% OFF</p>
                 <h5>MacBook Pro 2019</h5>
             </article>
 
             <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" width="100$">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" width="100%">
                 <p>$70.500</p>
                 <p>10% OFF</p>
                 <h5>Samsung Galaxy S10</h5>
             </article>
 
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart" width="100$">
+                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart" width="100%">
                 <p>$23.200</p>
                 <p>5% OFF</p>
                 <h5>SmartTv Samsung 43"</h5>
@@ -67,28 +73,28 @@
             <h4> Seccion de Ofertas </h4>
 
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex" width="100$">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex" width="100%">
                 <p>$6.770</p>
                 <p>40% OFF</p>
                 <h5>Cafetera Moulinex</h5>
             </article>
 
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019" width="100$">
+                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019" width="100%">
                 <p>$230.00</p>
                 <p>20% OFF</p>
                 <h5>MacBook Pro 2019</h5>
             </article>
 
             <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" width="100$">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" width="100%">
                 <p>$70.500</p>
                 <p>10% OFF</p>
                 <h5>Samsung Galaxy S10</h5>
             </article>
 
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart" width="100$">
+                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart" width="100%">
                 <p>$23.200</p>
                 <p>5% OFF</p>
                 <h5>SmartTv Samsung 43"</h5>
